<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_date"
            android:icon="@mipmap/ic_date"
            android:title="@string/select_date"/>
        <item
            android:id="@+id/nav_today"
            android:icon="@mipmap/ic_date"
            android:title="@string/plan_today"/>
        <item
            android:id="@+id/nav_tomorrow"
            android:icon="@mipmap/ic_date"
            android:title="@string/plan_tomorrow"/>
        <item
            android:id="@+id/nav_month"
            android:icon="@mipmap/ic_date"
            android:title="@string/plan_month"/>
        <item
            android:id="@+id/nav_completed"
            android:icon="@mipmap/ic_date"
            android:title="@string/plan_completed"/>
        <item
            android:id="@+id/nav_uncompleted"
            android:icon="@mipmap/ic_date"
            android:title="@string/plan_no_completed"/>
    </group>
</menu>